--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <header>
     <h1>My name is Stephanie Cain. I am a web designer and I love solving puzzles.</h1>
-    <p>I am currently a 2016 fellow at Code for America tackling economic development issues. My team is partnering with the City of New Orleans to develop tools to connect job seekers, training providers, and employers in the workforce system.</p>
+    <p>I am working as a 2016 fellow at Code for America tackling economic development issues. My team is partnering with the City of New Orleans to develop tools to connect job seekers, training providers, and employers in the workforce system.</p>
   </header>
   <section id="projects">
     <div class="sortBy">
@@ -38,7 +38,7 @@
       </form>
       <div class="clearfix"></div>
     </div>
-    <div class="project" id="workforwardNOLA" data-job="CfA" data-skills="research UX webDesign frontendDev content">
+    <div class="project" id="workforwardNOLA" data-job="CfA" data-type="web">
       <h3>Work Forward NOLA</h3>
       <h4>Code for America</h4>
       <p>Understanding the complexities of the workforce system at a local level in New Orleans as well as at the State and National level was one of our biggest challenges. The system is difficult to navigate and many job seekers drop off when they become unsure of their next steps.</p>
@@ -81,7 +81,7 @@
       </ul>
     </div>
 
-    <div class="project" id="postingPro" data-job="CfA" data-skills="research UX webDesign frontendDev">
+    <div class="project" id="postingPro" data-job="CfA" data-type="web">
       <h3>PostingPro</h3>
       <h4>Code for America</h4>
       <p>A couple days after being placed on the New Orleans team, we began building an online tool that would identify bias in job postings. The initial iteration was built upon two open-source libraries. The first flagged words based on three categories of unconscious bias, and the second determined the equivalent grade reading level for a block of text.</p>
@@ -120,7 +120,7 @@
       </ul>
     </div>
 
-    <div class="project" id="personalPortfolio" data-job="other" data-skills="drawing webDesign frontendDev content">
+    <div class="project" id="personalPortfolio" data-job="other" data-type="web">
       <h3>Personal Portfolio</h3>
       <p>I am redesigning my portfolio and will update this section as I progress.</p>
 
@@ -154,7 +154,7 @@
       </ul>
     </div>
 
-    <div class="project" id="onePager" data-job="CfA" data-skills="research printDesign frontendDev content">
+    <div class="project" id="onePager" data-job="CfA" data-type="print">
       <p>At the beginning of our fellowship in New Orleans, we learned of a one-pager that provided information about services at Opportunity Centers. It was the only marketing material used and was often overlooked by job seekers. I re-designed the one-pager for the city and wrote a blog-post about my process for the Code for America website.</p>
       <h3>How to design user-focused information</h3>
       <p>The process of looking for a job can be isolating and daunting for anyone. Add additional barriers such as previous incarceration, low literacy, or inability to use a computer, and the search becomes nearly impossible. In New Orleans, job seekers can find supportive resources no matter their barriers at any of five Opportunity Centers.</p>
@@ -227,7 +227,7 @@
       </ul>
     </div>
 
-    <div class="project" id="SPRPosters" data-job="OSMRE" data-skills="research drawing printDesign content">
+    <div class="project" id="SPRPosters" data-job="OSMRE" data-type="print">
       <h3>SPR Posters</h3>
       <h4>Office of Surface Mining Reclamation and Enforcement</h4>
       <p>OSMRE (Office of Surface Mining Reclamation and Enforcement) was working to protect streams near mining operations, and needed new visual designs to raise awareness of key issues. The graphics team was asked to create seven posters that would be used as educational tools during public meetings for the Stream Protection Rule.</p>
@@ -250,7 +250,7 @@
       </ul>
     </div>
 
-    <div class="project" id="employeeIntranet" data-job="OSMRE" data-skills="research UX webDesign frontendDev content">
+    <div class="project" id="employeeIntranet" data-job="OSMRE" data-type="web">
       <h3>Employee Intranet Re-Design</h3>
       <h4>Office of Surface Mining Reclamation and Enforcement</h4>
       <p>The employee intranet at the Office of Surface Mining Reclamation and Enforcement (OSMRE) was an out-of-date list of links that resembled Windows Explorer. This is a common problem across government websites.</p>
@@ -288,7 +288,7 @@
       </ul>
     </div>
 
-    <div class="project" id="webUpdateRequest" data-job="OSMRE" data-skills="research UX webDesign sharepoint content">
+    <div class="project" id="webUpdateRequest" data-job="OSMRE" data-type="web">
       <h3>Web Update Request System</h3>
       <h4>Office of Surface Mining Reclamation and Enforcement</h4>
       <p>The OSMRE web team was struggling both to track the work we were doing and to share the responsibility of updating all the sites. As a regulatory agency, it is important that OSMRE keeps information on public-facing websites current so as to be in compliance with SMCRA (Surface Mining Coal and Reclamation Act).</p>
@@ -338,7 +338,7 @@
       </ul>
     </div>
 
-    <div class="project" id="roar" data-job="other" data-skills="webDesign frontendDev">
+    <div class="project" id="roar" data-job="other" data-type="web">
       <h3>ROAR!</h3>
       <p>I was approached to create a website for an upcoming New Orleans band, ROAR! I started with a couple brainstorming sessions to learn what the band mates wanted for a visual brand and overall content of the site. ROAR! had an online presence and the website presented an opportunity to unite the brand on a single page. I created wireframes and design mock-ups to align us on a single direction.</p>
       <p>Once we had agreed on a design, I began building the site before the band went on tour. A simple version of the site launched in October 2015, and I continue managing new feature development on a rolling basis.</p>
@@ -358,7 +358,7 @@
       </ul>
     </div>
 
-    <div class="project" id="amlVideo" data-job="OSMRE" data-skills="research UX content photography videography">
+    <div class="project" id="amlVideo" data-job="OSMRE" data-type="video">
       <h3>Abandoned Mine Land Video</h3>
       <h4>Office of Surface Mining Reclamation and Enforcement</h4>
       <p>I was asked to create a video that highlighted the reclamation work being done to fill a dangerous hole left by an abandoned mine an hour outside of Seattle, Washington. The video would be published on OSMRE’s YouTube channel and shared with the DOI (Department of Interior) network.</p>
@@ -390,7 +390,7 @@
       </ul>
     </div>
 
-    <div class="project" id="AYPLogo" data-job="other" data-skills="drawing printDesign">
+    <div class="project" id="AYPLogo" data-job="other" data-type="branding">
       <h3>Logo for the Affordable Yoga Project</h3>
       <p>I was asked to create a logo for a new donation-based yoga class. The instructor and I met in person to discuss ideas for the logo, timeframe and the final deliverable. She wanted a logo that was based off a biblical story featuring a hippo and a lotus flower.</p>
       <p>I began by creating semantic mind maps. This exercise helped me brainstorm different visual representations of the subject matter. Next I sketched out several variations of the logo with pencil and pen, and narrowed down to three to move forward with. I showed the instructor the three logos and she gave feedback that allowed me to further refine into one design. I began to draw the logo digitally using Adobe Illustrator.</p>
@@ -408,7 +408,7 @@
       </ul>
     </div>
 
-    <div class="project" id="NHSLogo" data-job="other" data-skills="drawing printDesign">
+    <div class="project" id="NHSLogo" data-job="other" data-type="branding">
       <h3>Logo for North High School swim team</h3>
       <p>I was asked to create a logo for a local high school swim team that they could use on their swimming suits, caps, and other material. The coach and I met in person to discuss ideas for the logo, timeframe and the final deliverable. He wanted a logo that was based off the school’s mascot and colors but was unique to the swimming team.</p>
       <p>I began by creating mind maps with related words to the current schools branding. This exercise helped me brainstorm different visual representations of the subject matter. Next I sketched out several variations of the logo with pencil and pen, and narrowed down to three to move forward with. I showed the coach the three logos and he gave feedback that allowed me to further refine into one design. I began to draw the logo digitally by first capturing it with the mobile application, Adobe Capture and then bringing it into Adobe Illustrator.</p>
@@ -426,7 +426,7 @@
       </ul>
     </div>
 
-    <div class="project" id="HETPoster" data-job="other" data-skills="drawing printDesign">
+    <div class="project" id="HETPoster" data-job="other" data-type="print">
       <h3>Historic Elitch Theater Poster</h3>
       <p>I began volunteering with a local neighborhood group for the protection and preservation of the Elitch theater, Carousel pavilion and Theater plaza in Denver, Colorado. The theatre was listed on the National Register of Historic Places in 1978 and was going through renovations.</p>
       <p>I was asked to design a poster that would be used to market the upcoming summer movies series to be held in the theater plaza. Aside from the required content and logos to be included, I was given free-range to design the poster.</p>
@@ -445,7 +445,7 @@
       </ul>
     </div>
 
-    <div class="project" id="weddingInvites" data-job="other" data-skills="drawing printDesign content">
+    <div class="project" id="weddingInvites" data-job="other" data-type="print">
       <h3>Wedding Invitations</h3>
       <p>I was asked to create wedding invitations for two weddings. Both couples had the invitations printed themselves.</p>
 
@@ -463,7 +463,7 @@
       </ul>
     </div>
 
-    <div class="project" id="photography" data-job="other" data-skills="photography">
+    <div class="project" id="photography" data-job="other"  data-type="photo">
       <h3>Photography</h3>
       <p>I was asked to take photos of a local artist for use in future marketing material. I was also asked to take photos for a friends wedding rehearsal dinner.</p>
 
